Fixed deploying to GitHub Pages.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://sean.github.com
+url: http://seanmountcastle.com
 title: Sean Mountcastle
 subtitle: Random musings.
 author: Sean Mountcastle
